Refactor CORS logic and extend JWT expired time